<resources>
    <string name="app_name">Football App 2</string>
    <string name="vs">VS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lineup">Lineup</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="goals">Goals</string>
    <string name="shoot">Shoot</string>
    <string name="defense">Defense</string>
</resources>
